--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cy - Portfolio</title>
+    <title>Cy Portfolio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +17,11 @@
             --primary-red: #9E4244;
             --text-dark: #2c2c2c;
             --border-line: #000;
+            --muted-text: #666;
+        }
+
+        html {
+            scroll-behavior: smooth;
         }
 
         * {
@@ -30,21 +35,26 @@
             background-color: var(--bg-cream);
             color: var(--text-dark);
             border-top: 20px solid var(--primary-red);
-            display: flex;
-            flex-direction: column;
             min-height: 100vh;
         }
 
+        /* ✅ Fixed header */
         header {
-            padding: 2rem 5%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: var(--bg-cream);
+            padding: 1.5rem 5%;
+            z-index: 999;
+            border-bottom: 2px solid var(--border-line);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
         }
 
         nav {
             display: flex;
             justify-content: center;
             gap: 4rem;
-            padding-bottom: 15px;
-            border-bottom: 2px solid var(--border-line);
         }
 
         nav a {
@@ -52,47 +62,53 @@
             font-family: 'Playfair Display', serif;
             font-size: 1.2rem;
             color: var(--text-dark);
+            transition: 0.3s ease;
         }
 
         nav a:hover {
             color: var(--primary-red);
         }
 
+        /* Add spacing for fixed header */
+        main, .section {
+            padding-top: 100px;
+        }
+
         .hero {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            padding: 0 10%;
+            padding: 4rem 10% 6rem;
             align-items: center;
-            position: relative;
-            flex-grow: 1;
+            gap: 3rem;
         }
 
         h1 {
             font-family: 'Playfair Display', serif;
-            font-size: 5rem;
+            font-size: 4.5rem;
             font-weight: 400;
         }
 
         .subtitle {
             font-family: 'Playfair Display', serif;
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             font-style: italic;
             margin: 1rem 0 2.5rem;
-            color: #555;
+            color: var(--muted-text);
         }
 
         .button {
             display: inline-block;
             background-color: #B2B09B;
             color: white;
-            padding: 14px 40px;
+            padding: 14px 42px;
             border-radius: 50px;
             text-decoration: none;
             font-weight: bold;
+            transition: 0.3s ease;
         }
 
         .button:hover {
-            background-color: #9c9a87;
+            background-color: var(--primary-red);
         }
 
         .hero-image-container {
@@ -103,9 +119,9 @@
 
         .red-block {
             position: absolute;
-            top: 15%;
-            right: -20%;
-            width: 120%;
+            top: 18%;
+            right: -15%;
+            width: 110%;
             height: 65%;
             background-color: var(--primary-red);
         }
@@ -115,9 +131,57 @@
             width: 100%;
             height: auto;
             border: 8px solid #fff;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
             position: relative;
             object-fit: cover;
+        }
+
+        .section {
+            padding: 6rem 10%;
+            border-top: 2px solid var(--border-line);
+        }
+
+        .section-content {
+            max-width: 750px;
+        }
+
+        .section h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.8rem;
+            margin-bottom: 2rem;
+        }
+
+        .section p {
+            font-size: 1.1rem;
+            line-height: 1.9;
+            margin-bottom: 1.5rem;
+        }
+
+        .text-link {
+            color: var(--text-dark);
+            text-decoration: underline;
+            font-weight: 600;
+            transition: 0.3s ease;
+        }
+
+        .text-link:hover {
+            color: var(--primary-red);
+        }
+
+        .back-to-top {
+            display: inline-block;
+            margin-top: 2rem;
+            font-family: 'Playfair Display', serif;
+            font-size: 0.95rem;
+            text-decoration: none;
+            color: var(--text-dark);
+            border-bottom: 1px solid var(--text-dark);
+            transition: 0.3s ease;
+        }
+
+        .back-to-top:hover {
+            color: var(--primary-red);
+            border-color: var(--primary-red);
         }
 
         footer {
@@ -137,17 +201,41 @@
         .social-links a {
             color: var(--text-dark);
             font-size: 1.4rem;
+            transition: 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: var(--primary-red);
+        }
+
+        @media (max-width: 900px) {
+            .hero {
+                grid-template-columns: 1fr;
+            }
+
+            .red-block {
+                display: none;
+            }
+
+            h1 {
+                font-size: 3rem;
+            }
+
+            header {
+                padding: 1rem 5%;
+            }
         }
     </style>
 </head>
+
 <body>
 
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="aboutme.html">About Me</a>
+            <a href="#top">Home</a>
+            <a href="aboutme.html">Biography</a>
             <a href="projects.html">Projects</a>
-            <a href="#">Contacts</a>
+            <a href="#contacts">Contacts</a>
         </nav>
     </header>
 
@@ -155,31 +243,57 @@
         <div class="hero-text">
             <h1>Hi, I’m Cy!</h1>
             <p class="subtitle">welcome . . .</p>
-            <a href="#" class="button">Learn More</a>
+            <a href="#about" class="button">Learn More</a>
         </div>
 
         <div class="hero-image-container">
             <div class="red-block"></div>
-            <img
-                src="bio.jpeg"
-                alt="Portrait of Cy"
-                class="profile-img"
-            >
+            <img src="bio.jpeg" alt="Portrait of Cy" class="profile-img">
         </div>
     </main>
 
+    <section id="about" class="section">
+        <div class="section-content">
+            <h2>About Me</h2>
+            <p>
+                Hi! I'm Cy, a 2nd year Computer Science student with a strong passion for coding
+                and continuous learning. I genuinely enjoy building things through code and
+                exploring new technologies.
+            </p>
+            <p>
+                I consider myself an eager and adaptive person. I love taking on new challenges,
+                learning from experiences, and continuously improving my skills every step of the way.
+            </p>
+
+            <a href="#top" class="back-to-top">Back to Top</a>
+        </div>
+    </section>
+
+    <section id="contacts" class="section">
+        <div class="section-content">
+            <h2>Contacts</h2>
+            <p>
+                Email: 123cyrilmae@gmail.com <br>
+                Phone: 09184793447 <br>
+                Facebook:
+                <a href="https://web.facebook.com/cycy.1123" class="text-link">
+                    Cyril Libuton
+                </a>
+            </p>
+
+            <a href="#top" class="back-to-top">Back to Top</a>
+        </div>
+    </section>
+
     <footer>
         <div class="social-links">
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://mailto:123cyrilmae@gmail.com/"><i class="fa-regular fa-envelope"></i></a>
+            <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
         </div>
         <p>&copy; Cyril Libuton</p>
     </footer>
 
 </body>
 </html>
-
-
-
