--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,6 @@
       min-height: 100vh;
     }
 
-    /* ✅ Fixed header */
     header {
       position: fixed;
       top: 0;
@@ -74,7 +73,7 @@
       max-width: 900px;
       margin: 0 auto 40px auto;
       background-color: var(--bg-cream);
-      padding: 120px 50px 40px 50px; /* extra top padding for header */
+      padding: 120px 50px 40px 50px; 
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
     }
 
@@ -85,30 +84,6 @@
       margin-bottom: 20px;
       text-transform: uppercase;
       font-family: 'Playfair Display', serif;
-    }
-
-    .nav-buttons {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-
-    .nav-buttons a {
-      display: inline-block;
-      margin: 6px;
-      padding: 10px 18px;
-      background-color: var(--primary-red);
-      color: white;
-      text-decoration: none;
-      font-family: 'Lato', sans-serif;
-      font-size: 14px;
-      letter-spacing: 1px;
-      border-radius: 6px;
-      font-weight: 600;
-      transition: 0.3s ease;
-    }
-
-    .nav-buttons a:hover {
-      opacity: 0.9;
     }
 
     .section {
@@ -229,7 +204,6 @@
 
 <body>
 
-  <!-- HEADER -->
   <header>
       <nav>
           <a href="index.html">Home</a>
@@ -242,13 +216,6 @@
 
   <div class="page">
     <h1>Going Through What I Went Through</h1>
-
-    <!-- NAVIGATION BUTTONS -->
-    <div class="nav-buttons">
-      <a href="#childhood">Childhood Years</a>
-      <a href="#teenage">Teenage Years</a>
-      <a href="#college">College Years</a>
-    </div>
 
     <div class="section" id="childhood">
       <div class="section-title">Childhood Years</div>
@@ -346,3 +313,4 @@
 
 </body>
 </html>
+
