--- a/aboutme.html
+++ b/aboutme.html
@@ -144,7 +144,6 @@
       margin-bottom: 10px;
     }
 
-    /* Newspaper layout */
     .img-left {
       float: left;
       width: 45%;
@@ -252,7 +251,7 @@
     <div class="section-title">Teenage Years</div>
     <div class="divider"></div>
     <div class="content-with-photos">
-      <img src="teen1.jpeg" alt="Teenage Photo 1" class="img-right" style="width:45%; height:250px;">
+      <img src="teen1.jpg" alt="Teenage Photo 1" class="img-right" style="width:45%; height:250px;">
       <p>
         My teenage years were a mix of trying to figure out who I really wanted to be and dealing with the challenges of growing up.<sup>1</sup>
         Looking back, there are moments that make me cringe, times when I felt awkward like many teenagers do.<sup>2</sup>
@@ -261,7 +260,7 @@
         Things changed during the pandemic when I turned 15 and was stuck at home.<sup>3</sup>
         Instead of feeling lonely, I used that quiet time to slow down and think about myself.<sup>4</sup>
       </p>
-      <img src="teen2.jpeg" alt="Teenage Photo 2" class="img-left" style="width:40%; height:200px;">
+      <img src="teen2.jpg" alt="Teenage Photo 2" class="img-left" style="width:40%; height:200px;">
       <p>
         That still, quiet time became a big turning point for me.<sup>5</sup>
         It helped me become stronger and more confident.<sup>6</sup>
@@ -311,3 +310,4 @@
 
 </body>
 </html>
+
