--- a/aboutme.html
+++ b/aboutme.html
@@ -255,16 +255,27 @@
       <p>
         My teenage years were a mix of trying to figure out who I really wanted to be and dealing with the challenges of growing up.<sup>1</sup>
         Looking back, there are moments that make me cringe, times when I felt awkward like many teenagers do.<sup>2</sup>
+        Even though those times were uncomfortable, they were important for me to learn and grow.<sup>3</sup>
+        Like many teens, I spent a lot of time trying hard to fit in and be seen as cool.<sup>4</sup>
+        I followed trends, wanted to be liked, and sometimes forgot who I really was.<sup>5</sup>
+        But after a while, I got tired of pretending to be someone I wasn't.<sup>6</sup>
       </p>
       <p>
-        Things changed during the pandemic when I turned 15 and was stuck at home.<sup>3</sup>
-        Instead of feeling lonely, I used that quiet time to slow down and think about myself.<sup>4</sup>
+        Things changed during the pandemic when I turned 15 and was stuck at home with a lot of free time.<sup>7</sup>
+        Instead of feeling lonely, I used that quiet time to slow down and think about myself and what was important.<sup>8</sup>
+        Without all the usual distractions of school and friends, I had space to think deeply about my choices and how to be better.<sup>9</sup>
+        I started learning new things from inside myself, thinking about how I could improve.<sup>10</sup>
       </p>
       <img src="teen2.jpg" alt="Teenage Photo 2" class="img-left" style="width:40%; height:200px;">
       <p>
-        That still, quiet time became a big turning point for me.<sup>5</sup>
-        It helped me become stronger and more confident.<sup>6</sup>
-        I started paying more attention to what I really like and who I want to be.<sup>7</sup>
+        That still, quiet time became a big turning point for me.<sup>11</sup>
+        It helped me become stronger and more confident.<sup>12</sup>
+        It was a key time that helped build the person I am now and gave me the drive to keep moving forward.<sup>13</sup>
+        The self-awareness I gained helped me accept who I am instead of hiding parts of myself.<sup>14</sup>
+        I started paying more attention to what I really like and who I want to be, instead of just trying to fit in.<sup>15</sup>
+        This didn't happen all at once, but step by step.<sup>16</sup>
+        I learned that growing is something we do all the time, and every experience, good or bad, helps us become stronger.<sup>17</sup>
+        Overall, my teenage years gave me a strong base for a lifelong journey of learning and accepting myself.<sup>18</sup>
       </p>
       <div class="clear"></div>
     </div>
@@ -279,17 +290,24 @@
       <p>
         College has been an exciting and important part of my life so far.<sup>1</sup>
         It's a time when I keep growing while staying connected to who I was as a teenager.<sup>2</sup>
-        Every experience, whether hard or successful, gives me a chance to think and get better.<sup>3</sup>
+        Many of my values stay the same, but I've also learned to accept change and adjust in new ways.<sup>3</sup>
+        Every experience, whether it's hard or successful, gives me a chance to think and get better.<sup>4</sup>
+        I still make mistakes, but now I try to be patient and kind to myself about them.<sup>5</sup>
       </p>
       <p>
-        Meeting new people has helped me see the world in new ways.<sup>4</sup>
-        This part of life has encouraged me to keep working toward being a better version of myself.<sup>5</sup>
+        College has pushed me to leave my comfort zone, meet people from many different backgrounds, and understand myself better.<sup>6</sup>
+        Meeting new people has helped me see the world in new ways.<sup>7</sup>
+        This part of life has also encouraged me to keep working toward being a better version of myself every day.<sup>8</sup>
+        What started as a quiet time of thinking during the pandemic has grown into a constant process of learning and growing.<sup>9</sup>
+        I'm filled with hope and strength, and I believe that no matter where life takes me, I have what I need to face it with confidence and kindness.<sup>10</sup>
       </p>
       <img src="college2.jpeg" alt="College Photo 2" class="img-right" style="width:45%; height:250px;">
       <p>
-        College is about more than just school; it's about learning life lessons and building my future.<sup>6</sup>
-        I'm thankful for the chance to follow my interests and challenge myself.<sup>7</sup>
-        The journey continues, and I'm ready to face whatever comes with an open heart and mind.<sup>8</sup>
+        College is about more than just school; it's about learning life lessons and building my future.<sup>11</sup>
+        I'm thankful for the chance to follow my interests and challenge myself.<sup>12</sup>
+        This time has made me more committed to always growing and learning.<sup>13</sup>
+        While I respect my past and what shaped me, I also look forward to what's next with excitement.<sup>14</sup>
+        The journey continues, and I'm ready to face whatever comes with an open heart and mind.<sup>15</sup>
       </p>
       <div class="clear"></div>
       <a href="#top" class="home-btn">HOME</a>
@@ -310,4 +328,3 @@
 
 </body>
 </html>
-
