--- a/aboutme.html
+++ b/aboutme.html
@@ -198,6 +198,12 @@
         margin: 10px 0;
       }
     }
+
+    footer p {
+      text-align: center;
+      margin: 0;
+    }
+
   </style>
 </head>
 
@@ -286,7 +292,7 @@
     <div class="section-title">College Years</div>
     <div class="divider"></div>
     <div class="content-with-photos">
-      <img src="college1.jpeg" alt="College Photo 1" class="img-left" style="width:40%; height:200px;">
+      <img src="college 1.jpeg" alt="College Photo 1" class="img-left" style="width:40%; height:200px;">
       <p>
         College has been an exciting and important part of my life so far.<sup>1</sup>
         It's a time when I keep growing while staying connected to who I was as a teenager.<sup>2</sup>
@@ -328,3 +334,4 @@
 
 </body>
 </html>
+
