--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,7 @@
 <body>
   <header>
     <nav>
-      <a href="#top">Home</a>
+      <a href="index.html">Home</a>
       <a href="aboutme.html">Biography</a>
       <a href="projects.html">Projects</a>
       <a href="#contacts">Contacts</a>
@@ -206,3 +206,4 @@
   </footer>
 </body>
 </html>
+
