--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             min-height: 100vh;
         }
 
-        /* ✅ Fixed header */
         header {
             position: fixed;
             top: 0;
@@ -69,7 +68,6 @@
             color: var(--primary-red);
         }
 
-        /* Add spacing for fixed header */
         main, .section {
             padding-top: 100px;
         }
@@ -243,7 +241,7 @@
         <div class="hero-text">
             <h1>Hi, I’m Cy!</h1>
             <p class="subtitle">welcome . . .</p>
-            <a href="#about" class="button">Learn More</a>
+            <a href="#about" class="button">About Me</a>
         </div>
 
         <div class="hero-image-container">
@@ -297,3 +295,4 @@
 
 </body>
 </html>
+
