--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <div class="section-content">
         <h2>About Me</h2>
         <p>
-            Hi! I'm Cy, a 2nd year Computer Science student with a strong passion for coding
+            Hi! I'm Cyril Mae Libuton, a 2nd year Computer Science student with a strong passion for coding
             and continuous learning. I genuinely enjoy building things through code and
             exploring new technologies.
         </p>
@@ -353,3 +353,4 @@
 
 </body>
 </html>
+
