--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 <header>
     <nav>
         <a href="#top">Home</a>
-        <a href="#about">Biography</a>
+        <a href="aboutme.html">Biography</a>
         <a href="#projects">Projects</a>
         <a href="#contacts">Contacts</a>
     </nav>
@@ -353,4 +353,5 @@
 
 </body>
 </html>
+
 
