--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
 <header>
     <nav>
         <a href="#top">Home</a>
+        <a href="gallery.html">Gallery</a>
         <a href="aboutme.html">Biography</a>
         <a href="#projects">Projects</a>
         <a href="#contacts">Contacts</a>
@@ -353,5 +354,6 @@
 
 </body>
 </html>
+
 
 
